# Blur-AutoClicker

./: .gitignore  CHANGELOG.md  Cargo.toml  main.py
UI/: ui_main_window.py  ui_main_window.ui
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/engine/: mod.rs  worker.rs
src/Py/: hotkey_manager.py  rust_translation.py  settings_manager.py
src/components/panels/: SettingsPanel.tsx
