[package]
name = "clicker_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "clicker_engine"
crate-type = ["cdylib"]
path = "src/Rust/clicker_engine.rs"

[dependencies]
windows = { version = "0.62.2", features = ["Win32_System_SystemInformation", "Win32_System_Threading", "Win32_Foundation"] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = false
